# tiktok-matrix

./: .env  .env.dev  .env.prod  .env.test  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  111.txt  AGENTS.md  CHANGELOG  CHANGELOG.md  DEBUG_INTEGRATION_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DEVICE_MODULE_REFACTORING.md  DISTRIBUTOR_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  IMPROVEMENTS_V2.md  LICENSE_MIGRATION_API.md  LICENSE_MIGRATION_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_PROGRESS.md  QUICK_START_DEBUG.md  README.md  TITLEBAR_UPDATE_MIGRATION.md  WEBSOCKET_SERVICE_CLEANUP_SUMMARY.md  WEBSOCKET_SERVICE_MIGRATION_GUIDE.md  agentVersion.json  api-test.md  build.bat  build.ps1  build.sh  cargo.toml  check-migration.js  checkout.bat  checkout.ps1  comment.md  commit.ps1  coreVersion.json  (+20 more)
.github/agents/: my-agent.agent.md
.github/chatmodes/: tiktok-matrix.chatmode.md
.github/workflows/: build-agent-all.yml  build-agent-macos.yml  build-agent-windows.yml  build-distributor.yml  build-matrix-all.yml  build-matrix-macos.yml  build-matrix-windows.yml  build-windows.yml  build.yml  deploy.yml  publish.yml  release-macos-nio.yml  release-macos.yml  release-windows-nio.yml  release-windows.yml  release.yml  test-build.yml  (+1 more)
.tauri/: myapp.key  myapp.key.pub
docs/: BOOST_COMMENTS.md  FEATURE_UNLOCK.md  LicenseManagementDialog.md  UPDATE_FLOW.md  UPDATE_OPTIMIZATION_SUMMARY_CN.md  WHITELABEL.md
examples/: whitelabel-config.json
public/: debug.html  dev.html  widget_preview.html
scripts/: build-agent.js  build-distributor-packages-mac.js  build-distributor-packages-windows.js  build-whitelabel.js  deploy-agent.js  deploy-ui.js  run-agent.js  send-msg.js  update-core-version.js  update-download-mac.js  update-download-url.js  update-download-windows.js  update-version.js  update-version_v2.js  whitelabel-config.js
scripts-nio/: build-agent.js  build-whitelabel.js  deploy-agent.js  send-msg.js
src/: App.vue  AppDialog.vue  i18n.js  index.css  main.js  styles.css
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  tauri.conf.json  tiktok-matrix-dev.exe.manifest  tiktok-matrix-manifest-dev.rc  tiktok-matrix-manifest.rc  tiktok-matrix.exe.manifest
src-tauri/data/: tiktok.db
src-tauri/i18n/: zh.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_manager.rs  agent_ws_bridge.rs  auto_update_manager.rs  distributor.rs  file_utils.rs  http_client.rs  init_log.rs  main.rs  process_manager.rs  proxy_config.rs  request_util.rs  scrcpy_ws.rs  storage.rs  update_manager.rs  websocket_manager.rs  ws.rs
whitelable/: README.md
(+201 files in other folders)
