[package]
name = "TikMatrix"
version = "0.0.5"
description = "TikTok Matrix System by tikmatrix.com"
authors = ["niostack"]
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
embed-resource = "2.4"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
tauri = { version = "1.5", features = [ "os-all",
    "window-all",
    "dialog-all",
    "updater",
    "app-all",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
futures-util = "0.3.30"
zip = "2.1.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
