[package]
name = "TikMatrix"
version = "1.0.0"
description = "TikTok Matrix System by tikmatrix.com"
authors = ["niostack"]
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
embed-resource = "2.4"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
tauri = { version = "1.5", features = [ "global-shortcut-all", "clipboard-all", "path-all", "fs-all",
    "os-all",
    "window-all",
    "dialog-all",
    "updater",
    "app-all",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
futures-util = "0.3.30"
zip = "2.1.5"
flexi_logger = "0.27"
log = "0.4"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
